// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutPreview /> 01-LAYOUT_TYPE.row(rowLine만 존재하는 경우) case: 1 rowLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-rows: 3.3fr 6.7fr;"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 01-LAYOUT_TYPE.row(rowLine만 존재하는 경우) case: 2 rowLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-rows: 1.7fr 8.3fr 1.7fr;"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 02-LAYOUT_TYPE.column(columnLine만 존재하는 경우) case: 1 columnLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-columns: 3.0fr 7.0fr;"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 02-LAYOUT_TYPE.column(columnLine만 존재하는 경우) case: 2 columnLines 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-columns: 2.0fr 8.0fr 2.0fr;"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 03-LAYOUT_TYPE.complexedRow case: 1 rowLine, 1 columnLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-rows: 2.7fr 7.3fr; grid-template-columns: 2.0fr 8.0fr;"
    >
      <div
        style="grid-column: 1 / 3;"
      >
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 03-LAYOUT_TYPE.complexedRow case: 1 rowLine, 2 columnLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-rows: 2.7fr 7.3fr; grid-template-columns: 2.0fr 7.6fr 2.4fr;"
    >
      <div
        style="grid-column: 1 / 4;"
      >
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
      <div>
        4
      </div>
    </section>
  </div>
</body>
`;

exports[`<LayoutPreview /> 03-LAYOUT_TYPE.complexedRow case: 2 rowLine, 2 columnLine 1`] = `
<body>
  <div>
    <section
      style="display: grid; grid-template-rows: 2.7fr 7.3fr 2.7fr; grid-template-columns: 2.0fr 8.0fr 2.0fr;"
    >
      <div
        style="grid-column: 1 / 4;"
      >
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
      <div>
        4
      </div>
      <div
        style="grid-column: 1 / 4;"
      >
        5
      </div>
    </section>
  </div>
</body>
`;
